POWR-1254 enable a dependent view for group update

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -1316,16 +1316,16 @@ display:
           1: AND
       css_class: group-content-admin
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
-        1: 'languages:language_content'
-        2: 'languages:language_interface'
-        3: route
-        4: url
-        5: url.query_args
-        6: 'user.node_grants:view'
-        7: route.group
-        8: user.group_permissions
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - route.group
+        - url
+        - url.query_args
+        - user.group_permissions
+        - 'user.node_grants:view'
       tags:
         - 'config:workflow_list'
   page_1:
@@ -1335,7 +1335,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/nodes
+      path: group/%group/content
       menu:
         type: tab
         title: Content
@@ -1346,15 +1346,15 @@ display:
         context: '0'
         menu_name: main
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
-        1: 'languages:language_content'
-        2: 'languages:language_interface'
-        3: route
-        4: url
-        5: url.query_args
-        6: 'user.node_grants:view'
-        7: route.group
-        8: user.group_permissions
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - route.group
+        - url
+        - url.query_args
+        - user.group_permissions
+        - 'user.node_grants:view'
       tags:
         - 'config:workflow_list'
