--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -1,6 +1,6 @@
 uuid: 3d09c810-2ff1-4d99-a23a-177ed4304165
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - field.storage.node.field_reviewer
@@ -1052,18 +1052,19 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
-        1: 'languages:language_content'
-        2: 'languages:language_interface'
-        3: route
-        4: url
-        5: url.query_args
-        6: 'user.node_grants:view'
-        7: route.group
-        8: user.group_permissions
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - route.group
+        - url
+        - url.query_args
+        - user.group_permissions
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_reviewer'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -1082,15 +1083,16 @@ display:
         context: '0'
         menu_name: main
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
-        1: 'languages:language_content'
-        2: 'languages:language_interface'
-        3: route
-        4: url
-        5: url.query_args
-        6: 'user.node_grants:view'
-        7: route.group
-        8: user.group_permissions
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - route.group
+        - url
+        - url.query_args
+        - user.group_permissions
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_reviewer'
+        - extensions
