POWR-1254 clean up the patch against RC4

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -1335,7 +1335,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/content
+      path: group/%group/all-nodes
       menu:
         type: tab
         title: Content
@@ -1345,6 +1345,7 @@ display:
         weight: 25
         context: '0'
         menu_name: main
+      enabled: true
     cache_metadata:
       max-age: 0
       contexts:
