POWR-1273 first pass at group field permissions

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -26,6 +26,7 @@ dependencies:
     - content_moderation
     - datetime
     - entity_browser
+    - gcontent_field
     - maxlength
     - path
     - text
@@ -86,7 +87,7 @@ content:
     region: content
     third_party_settings: {  }
   field_group:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -136,7 +137,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 17
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -145,7 +146,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 19
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -171,9 +172,18 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 16
+    region: content
+    settings:
+      widget: autocomplete
+      multiple: '1'
+      required: '1'
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
