--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -12,91 +12,94 @@ audience: member
 group_type: project
 permissions_ui: true
 permissions:
-  0: 'edit group'
-  1: 'view group'
-  2: 'administer members'
-  3: 'update own group_membership content'
-  4: 'leave group'
-  5: 'view group_membership content'
-  6: 'access group_node overview'
-  7: 'delete any group_node:news entity'
-  8: 'delete own group_node:news entity'
-  9: 'update any group_node:news entity'
-  10: 'update own group_node:news entity'
-  11: 'view group_node:news entity'
-  12: 'view unpublished group_node:news entity'
-  13: 'create group_node:news content'
-  14: 'view group_node:news content'
-  15: 'create group_node:city_service entity'
-  16: 'delete any group_node:city_service entity'
-  17: 'delete own group_node:city_service entity'
-  18: 'update any group_node:city_service entity'
-  19: 'update own group_node:city_service entity'
-  20: 'view group_node:city_service entity'
-  21: 'view unpublished group_node:city_service entity'
-  22: 'create group_node:city_service content'
-  23: 'view group_node:city_service content'
-  26: 'delete any group_node:event entity'
-  27: 'delete own group_node:event entity'
-  28: 'update any group_node:event entity'
-  29: 'update own group_node:event entity'
-  30: 'view group_node:event entity'
-  31: 'view unpublished group_node:event entity'
-  32: 'create group_node:event content'
-  33: 'view group_node:event content'
-  34: 'create group_node:notification entity'
-  35: 'delete any group_node:notification entity'
-  36: 'delete own group_node:notification entity'
-  37: 'update any group_node:notification entity'
-  38: 'update own group_node:notification entity'
-  39: 'view group_node:notification entity'
-  40: 'view unpublished group_node:notification entity'
-  41: 'create group_node:notification content'
-  42: 'view group_node:notification content'
-  43: 'create group_media:audio entity'
-  44: 'delete any group_media:audio entity'
-  45: 'delete own group_media:audio entity'
-  46: 'update any group_media:audio entity'
-  47: 'update own group_media:audio entity'
-  48: 'view group_media:audio entity'
-  49: 'view unpublished group_media:audio entity'
-  50: 'create group_media:audio content'
-  51: 'create group_media:document entity'
-  52: 'delete any group_media:document entity'
-  53: 'delete own group_media:document entity'
-  54: 'update any group_media:document entity'
-  55: 'update own group_media:document entity'
-  56: 'view group_media:document entity'
-  57: 'view unpublished group_media:document entity'
-  58: 'create group_media:document content'
-  59: 'create group_media:image entity'
-  60: 'delete any group_media:image entity'
-  61: 'delete own group_media:image entity'
-  62: 'update any group_media:image entity'
-  63: 'update own group_media:image entity'
-  64: 'view group_media:image entity'
-  65: 'view unpublished group_media:image entity'
-  66: 'create group_media:video entity'
-  67: 'delete any group_media:video entity'
-  68: 'delete own group_media:video entity'
-  69: 'update any group_media:video entity'
-  70: 'update own group_media:video entity'
-  71: 'view group_media:video entity'
-  72: 'view unpublished group_media:video entity'
-  73: 'create group_media:video content'
-  74: 'access group_media overview'
-  75: 'view group_media:document content'
-  76: 'create group_media:image content'
-  77: 'view group_media:image content'
-  78: 'view group_media:video content'
-  79: 'create group_node:page entity'
-  80: 'delete any group_node:page entity'
-  81: 'delete own group_node:page entity'
-  82: 'update any group_node:page entity'
-  83: 'update own group_node:page entity'
-  84: 'view group_node:page entity'
-  85: 'view unpublished group_node:page entity'
-  86: 'create group_node:page content'
-  87: 'view group_node:page content'
-  88: 'create group_node:event entity'
-  89: 'create group_node:news entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'administer members'
+  - 'create group_media:audio content'
+  - 'create group_media:audio entity'
+  - 'create group_media:document content'
+  - 'create group_media:document entity'
+  - 'create group_media:image content'
+  - 'create group_media:image entity'
+  - 'create group_media:video content'
+  - 'create group_media:video entity'
+  - 'create group_node:city_service content'
+  - 'create group_node:city_service entity'
+  - 'create group_node:event content'
+  - 'create group_node:event entity'
+  - 'create group_node:news content'
+  - 'create group_node:news entity'
+  - 'create group_node:notification content'
+  - 'create group_node:notification entity'
+  - 'create group_node:page content'
+  - 'create group_node:page entity'
+  - 'delete any group_media:audio entity'
+  - 'delete any group_media:document entity'
+  - 'delete any group_media:image entity'
+  - 'delete any group_media:video entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete any group_node:event entity'
+  - 'delete any group_node:news entity'
+  - 'delete any group_node:notification entity'
+  - 'delete any group_node:page entity'
+  - 'delete own group_media:audio entity'
+  - 'delete own group_media:document entity'
+  - 'delete own group_media:image entity'
+  - 'delete own group_media:video entity'
+  - 'delete own group_node:city_service entity'
+  - 'delete own group_node:event entity'
+  - 'delete own group_node:news content'
+  - 'delete own group_node:news entity'
+  - 'delete own group_node:notification entity'
+  - 'delete own group_node:page entity'
+  - 'edit group'
+  - 'leave group'
+  - 'update any group_media:audio entity'
+  - 'update any group_media:document entity'
+  - 'update any group_media:image entity'
+  - 'update any group_media:video entity'
+  - 'update any group_node:city_service entity'
+  - 'update any group_node:event entity'
+  - 'update any group_node:news content'
+  - 'update any group_node:news entity'
+  - 'update any group_node:notification entity'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio entity'
+  - 'update own group_media:document entity'
+  - 'update own group_media:image entity'
+  - 'update own group_media:video entity'
+  - 'update own group_membership content'
+  - 'update own group_node:city_service entity'
+  - 'update own group_node:event entity'
+  - 'update own group_node:news content'
+  - 'update own group_node:news entity'
+  - 'update own group_node:notification entity'
+  - 'update own group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document content'
+  - 'view group_media:document entity'
+  - 'view group_media:image content'
+  - 'view group_media:image entity'
+  - 'view group_media:video content'
+  - 'view group_media:video entity'
+  - 'view group_membership content'
+  - 'view group_node:city_service content'
+  - 'view group_node:city_service entity'
+  - 'view group_node:event content'
+  - 'view group_node:event entity'
+  - 'view group_node:news content'
+  - 'view group_node:news entity'
+  - 'view group_node:notification content'
+  - 'view group_node:notification entity'
+  - 'view group_node:page content'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
