--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -208,3 +208,5 @@ geocoder_field: 2.2.0
 geocoder_address: 2.2.0
 geocoder_geofield: 2.2.0
 address_map_link: 1.0.0
+entity: 1.0.0-rc3
+gcontent_field: 0.0.0
