--- a/web/sites/default/config/group.role.project-outsider.yml
+++ b/web/sites/default/config/group.role.project-outsider.yml
@@ -12,13 +12,13 @@ audience: outsider
 group_type: project
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'view group_node:news entity'
-  2: 'view group_node:city_service entity'
-  5: 'view group_node:event entity'
-  6: 'view group_node:notification entity'
-  7: 'view group_media:audio entity'
-  8: 'view group_media:document entity'
-  9: 'view group_media:image entity'
-  10: 'view group_media:video entity'
-  11: 'view group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:city_service entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
