POWR-1156 fix config conflict and run a composer update

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
@@ -64,6 +64,7 @@ hidden:
   field_park_amenities_activities: true
   field_portlandmaps_id: true
   field_property_id: true
+  field_reviewer: true
   field_search_keywords: true
   field_size_in_acres: true
   field_year_acquired: true
