POWR-1273 all the config to add the new groups field

--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - chosen_field
     - content_moderation
     - file
+    - gcontent_field
 _core:
   default_config_hash: xFJUl0MccoGPEv1eb_I_XnxzjqvZ8M5HA1G3PBtv9IE
 id: media.document.default
@@ -55,9 +56,18 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 5
+    region: content
+    settings:
+      widget: autocomplete
+      required: '1'
+      multiple: 0
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -71,7 +81,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
