--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -16,9 +16,11 @@ dependencies:
     - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
+    - workflows.workflow.editorial
   module:
     - chosen_field
     - content_moderation
+    - gcontent_field
     - maxlength
     - paragraphs
     - path
@@ -46,7 +48,7 @@ content:
     type: chosen_select
     region: content
   field_group:
-    weight: 14
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -76,7 +78,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 15
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -85,7 +87,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -141,9 +143,18 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 15
+    region: content
+    settings:
+      widget: autocomplete
+      required: '1'
+      multiple: 0
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 18
     settings: {  }
     region: content
     third_party_settings: {  }
