--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -17,10 +17,12 @@ dependencies:
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
     - node.type.page
+    - workflows.workflow.editorial
   module:
     - chosen_field
     - content_moderation
     - entity_browser
+    - gcontent_field
     - maxlength
     - path
     - text
@@ -65,10 +67,13 @@ content:
     region: content
     third_party_settings: {  }
   field_group:
-    weight: 12
-    settings: {  }
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: chosen_select
+    type: entity_reference_autocomplete
     region: content
   field_legacy_path:
     weight: 9
@@ -101,7 +106,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 15
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -110,7 +115,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -136,9 +141,18 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 16
+    region: content
+    settings:
+      widget: autocomplete
+      multiple: 0
+      required: 0
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 18
     settings: {  }
     region: content
     third_party_settings: {  }
