--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -10,8 +10,8 @@ dependencies:
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_featured_media
-    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_location
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
     - field.field.node.event.field_search_keywords
@@ -395,9 +395,10 @@ hidden:
   field_body_content: true
   field_event_location: true
   field_featured_media: true
-  field_group: true
   field_legacy_path: true
+  field_location: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
+  group_content: true
   links: true
