--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -8,8 +8,9 @@ dependencies:
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_media
-    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
+    - field.field.node.news.field_location
+    - field.field.node.news.field_news_type
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
@@ -165,10 +166,12 @@ hidden:
   field_body_content: true
   field_feature_this_content: true
   field_feature_until: true
-  field_group: true
   field_legacy_path: true
+  field_location: true
+  field_news_type: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
   field_topics: true
+  group_content: true
   links: true
