--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -87,10 +87,17 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
+  field_group:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
 hidden:
   content_moderation_control: true
   field_audience: true
-  field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
@@ -99,4 +106,5 @@ hidden:
   field_search_keywords: true
   field_summary: true
   field_topics: true
+  group_content: true
   links: true
