--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
-    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
@@ -89,7 +88,6 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
-  field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
@@ -98,4 +96,5 @@ hidden:
   field_search_keywords: true
   field_summary: true
   field_topics: true
+  group_content: true
   links: true
