--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
-    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
@@ -125,11 +124,11 @@ hidden:
   field_audience: true
   field_body_content: true
   field_featured_media: true
-  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
   field_topics: true
+  group_content: true
   links: true
