--- a/web/sites/default/config/field.field.node.news.field_group.yml
+++ b/web/sites/default/config/field.field.node.news.field_group.yml
@@ -1,4 +1,4 @@
-uuid: 3d672e81-dc63-4688-91b3-7c5cdabeb3ac
+uuid: eecfc2a0-4691-4253-8d08-b2e2f10f6c12
 langcode: en
 status: true
 dependencies:
@@ -39,5 +39,5 @@ settings:
       field: label
       direction: ASC
     auto_create: false
-    auto_create_bundle: bureau_office
+    auto_create_bundle: advisory_group
 field_type: entity_reference
