--- a/web/sites/default/config/field.field.node.page.field_group.yml
+++ b/web/sites/default/config/field.field.node.page.field_group.yml
@@ -1,4 +1,4 @@
-uuid: 4efe5e3a-e9e3-431b-b0ee-0033595ccb3a
+uuid: 6502b5b7-683f-4b71-872b-66b0348513ef
 langcode: en
 status: true
 dependencies:
@@ -39,5 +39,5 @@ settings:
       field: label
       direction: ASC
     auto_create: false
-    auto_create_bundle: bureau_office
+    auto_create_bundle: advisory_group
 field_type: entity_reference
