--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - allowed_formats
     - chosen_field
     - content_moderation
+    - gcontent_field
     - maxlength
     - text
     - video_embed_field
@@ -49,7 +50,7 @@ content:
     type: string_textfield
     region: content
   field_group:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -90,9 +91,18 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 9
+    region: content
+    settings:
+      widget: autocomplete
+      required: '1'
+      multiple: 0
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -114,7 +124,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 10
+    weight: 11
     region: content
     settings:
       display_label: true
