--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -23,6 +23,7 @@ dependencies:
     - chosen_field
     - content_moderation
     - focal_point
+    - gcontent_field
     - lightning_media
     - maxlength
     - text
@@ -56,7 +57,7 @@ content:
     type: string_textfield
     region: content
   field_group:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -83,6 +84,15 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 7
+    region: content
+    settings:
+      widget: autocomplete
+      required: '1'
+      multiple: 0
+    third_party_settings: {  }
   image:
     type: image_focal_point
     weight: 2
@@ -98,7 +108,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -112,7 +122,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 9
     region: content
     settings:
       display_label: true
