--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -20,11 +20,13 @@ dependencies:
     - field.field.node.development_permit.field_summary
     - field.field.node.development_permit.field_topics
     - node.type.development_permit
+    - workflows.workflow.editorial
   module:
     - allowed_formats
     - chosen_field
     - content_moderation
     - entity_browser
+    - gcontent_field
     - link
     - maxlength
     - path
@@ -59,12 +61,6 @@ content:
     region: content
   field_community_actions:
     weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
-  field_group:
-    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -131,7 +127,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -140,7 +136,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -181,9 +177,18 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 18
+    region: content
+    settings:
+      widget: autocomplete
+      multiple: true
+      required: false
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 19
+    weight: 20
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -219,6 +224,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_group: true
   promote: true
   status: true
   sticky: true
