--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -27,6 +27,7 @@ dependencies:
     - conditional_fields
     - content_moderation
     - entity_browser
+    - gcontent_field
     - paragraphs
     - text
     - time_field
@@ -141,7 +142,7 @@ content:
     region: content
   field_event_location:
     type: entity_reference_paragraphs
-    weight: 20
+    weight: 21
     settings:
       title: location
       title_plural: locations
@@ -167,13 +168,13 @@ content:
     region: content
     third_party_settings: {  }
   field_group:
-    weight: 15
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 18
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -205,7 +206,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 16
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -214,7 +215,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 19
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -317,9 +318,18 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 16
+    region: content
+    settings:
+      widget: autocomplete
+      multiple: '1'
+      required: '1'
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 17
+    weight: 19
     settings: {  }
     region: content
     third_party_settings: {  }
