--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -44,6 +44,14 @@ targetEntityType: node
 bundle: city_service
 mode: default
 content:
+  field_group:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_search_keywords:
     weight: 3
     label: above
@@ -109,11 +117,11 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
-  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
   field_topics: true
+  group_content: true
   links: true
   scheduled_publication: true
