--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
-    - field.field.node.city_service.field_group
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
@@ -119,7 +118,6 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
-  field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
@@ -128,5 +126,6 @@ hidden:
   field_service_mode: true
   field_time_to_complete: true
   field_topics: true
+  group_content: true
   links: true
   scheduled_publication: true
