--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -232,6 +232,14 @@ content:
             fi-def-at: false
     type: time_formatter
     region: content
+  field_group:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_location:
     weight: 1
     label: above
@@ -362,9 +370,9 @@ hidden:
   content_moderation_control: true
   field_event_location: true
   field_featured_media: true
-  field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
+  group_content: true
   links: true
