--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -107,6 +107,14 @@ content:
             fis-def-at: false
             fi-def-at: false
     region: content
+  field_group:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_location:
     weight: 5
     label: above
@@ -180,11 +188,11 @@ hidden:
   field_body: true
   field_feature_this_content: true
   field_feature_until: true
-  field_group: true
   field_legacy_path: true
   field_published_on: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
   field_topics: true
+  group_content: true
   links: true
