--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -34,50 +34,90 @@ permissions:
   - 'create group_node:notification entity'
   - 'create group_node:page content'
   - 'create group_node:page entity'
+  - 'delete any group_media:audio content'
   - 'delete any group_media:audio entity'
+  - 'delete any group_media:document content'
   - 'delete any group_media:document entity'
+  - 'delete any group_media:image content'
   - 'delete any group_media:image entity'
+  - 'delete any group_media:video content'
   - 'delete any group_media:video entity'
+  - 'delete any group_node:city_service content'
   - 'delete any group_node:city_service entity'
+  - 'delete any group_node:development_permit content'
+  - 'delete any group_node:event content'
   - 'delete any group_node:event entity'
   - 'delete any group_node:news content'
   - 'delete any group_node:news entity'
+  - 'delete any group_node:notification content'
   - 'delete any group_node:notification entity'
+  - 'delete any group_node:page content'
   - 'delete any group_node:page entity'
+  - 'delete own group_media:audio content'
   - 'delete own group_media:audio entity'
+  - 'delete own group_media:document content'
   - 'delete own group_media:document entity'
+  - 'delete own group_media:image content'
   - 'delete own group_media:image entity'
+  - 'delete own group_media:video content'
   - 'delete own group_media:video entity'
+  - 'delete own group_node:city_service content'
   - 'delete own group_node:city_service entity'
+  - 'delete own group_node:development_permit content'
   - 'delete own group_node:development_permit entity'
+  - 'delete own group_node:event content'
   - 'delete own group_node:event entity'
   - 'delete own group_node:news content'
   - 'delete own group_node:news entity'
+  - 'delete own group_node:notification content'
   - 'delete own group_node:notification entity'
+  - 'delete own group_node:page content'
+  - 'delete own group_node:page entity'
   - 'edit group'
   - 'leave group'
+  - 'update any group_media:audio content'
   - 'update any group_media:audio entity'
+  - 'update any group_media:document content'
   - 'update any group_media:document entity'
+  - 'update any group_media:image content'
   - 'update any group_media:image entity'
+  - 'update any group_media:video content'
   - 'update any group_media:video entity'
+  - 'update any group_node:city_service content'
   - 'update any group_node:city_service entity'
+  - 'update any group_node:development_permit content'
   - 'update any group_node:development_permit entity'
+  - 'update any group_node:event content'
   - 'update any group_node:event entity'
   - 'update any group_node:news content'
   - 'update any group_node:news entity'
+  - 'update any group_node:notification content'
   - 'update any group_node:notification entity'
+  - 'update any group_node:page content'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio content'
   - 'update own group_media:audio entity'
+  - 'update own group_media:document content'
   - 'update own group_media:document entity'
+  - 'update own group_media:image content'
   - 'update own group_media:image entity'
+  - 'update own group_media:video content'
   - 'update own group_media:video entity'
   - 'update own group_membership content'
+  - 'update own group_node:city_service content'
   - 'update own group_node:city_service entity'
+  - 'update own group_node:development_permit content'
   - 'update own group_node:development_permit entity'
+  - 'update own group_node:event content'
   - 'update own group_node:event entity'
   - 'update own group_node:news content'
   - 'update own group_node:news entity'
+  - 'update own group_node:notification content'
   - 'update own group_node:notification entity'
+  - 'update own group_node:page content'
+  - 'update own group_node:page entity'
   - 'view group'
+  - 'view group_media:audio content'
   - 'view group_media:audio entity'
   - 'view group_media:document content'
   - 'view group_media:document entity'
@@ -88,6 +128,7 @@ permissions:
   - 'view group_membership content'
   - 'view group_node:city_service content'
   - 'view group_node:city_service entity'
+  - 'view group_node:development_permit content'
   - 'view group_node:development_permit entity'
   - 'view group_node:event content'
   - 'view group_node:event entity'
@@ -95,6 +136,7 @@ permissions:
   - 'view group_node:news entity'
   - 'view group_node:notification content'
   - 'view group_node:notification entity'
+  - 'view group_node:page content'
   - 'view group_node:page entity'
   - 'view unpublished group_media:audio entity'
   - 'view unpublished group_media:document entity'
