--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -12,84 +12,117 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
-  0: 'edit group'
-  1: 'view group'
-  2: 'administer members'
-  3: 'update own group_membership content'
-  4: 'leave group'
-  5: 'view group_membership content'
-  6: 'access group_node overview'
-  7: 'delete any group_node:news entity'
-  8: 'delete own group_node:news entity'
-  9: 'update any group_node:news entity'
-  10: 'update own group_node:news entity'
-  11: 'view group_node:news entity'
-  12: 'view unpublished group_node:news entity'
-  13: 'create group_node:news content'
-  14: 'view group_node:news content'
-  15: 'view group_node:guide entity'
-  16: 'view group_node:information entity'
-  17: 'delete any group_node:event entity'
-  18: 'delete own group_node:event entity'
-  19: 'update any group_node:event entity'
-  20: 'update own group_node:event entity'
-  21: 'view group_node:event entity'
-  22: 'view unpublished group_node:event entity'
-  23: 'create group_node:event content'
-  24: 'view group_node:event content'
-  25: 'create group_node:notification entity'
-  26: 'delete any group_node:notification entity'
-  27: 'delete own group_node:notification entity'
-  28: 'update any group_node:notification entity'
-  29: 'update own group_node:notification entity'
-  30: 'view group_node:notification entity'
-  31: 'view unpublished group_node:notification entity'
-  32: 'create group_node:notification content'
-  33: 'view group_node:notification content'
-  34: 'access group_media overview'
-  35: 'create group_media:audio entity'
-  36: 'delete any group_media:audio entity'
-  37: 'delete own group_media:audio entity'
-  38: 'update any group_media:audio entity'
-  39: 'update own group_media:audio entity'
-  40: 'view group_media:audio entity'
-  41: 'view unpublished group_media:audio entity'
-  42: 'create group_media:audio content'
-  43: 'create group_media:document entity'
-  44: 'delete any group_media:document entity'
-  45: 'delete own group_media:document entity'
-  46: 'update any group_media:document entity'
-  47: 'update own group_media:document entity'
-  48: 'view group_media:document entity'
-  49: 'view unpublished group_media:document entity'
-  50: 'create group_media:document content'
-  51: 'view group_media:document content'
-  52: 'create group_media:image entity'
-  53: 'delete any group_media:image entity'
-  54: 'delete own group_media:image entity'
-  55: 'update any group_media:image entity'
-  56: 'update own group_media:image entity'
-  57: 'view group_media:image entity'
-  58: 'view unpublished group_media:image entity'
-  59: 'create group_media:image content'
-  60: 'view group_media:image content'
-  61: 'create group_media:video entity'
-  62: 'delete any group_media:video entity'
-  63: 'delete own group_media:video entity'
-  64: 'update any group_media:video entity'
-  65: 'update own group_media:video entity'
-  66: 'view group_media:video entity'
-  67: 'view unpublished group_media:video entity'
-  68: 'create group_media:video content'
-  69: 'view group_media:video content'
-  70: 'create group_node:page entity'
-  71: 'delete any group_node:page entity'
-  72: 'delete own group_node:page entity'
-  73: 'update any group_node:page entity'
-  74: 'update own group_node:page entity'
-  75: 'view group_node:page entity'
-  76: 'view unpublished group_node:page entity'
-  77: 'create group_node:page content'
-  78: 'view group_node:page content'
-  122: 'create group_node:event entity'
-  133: 'create group_node:news entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'administer members'
+  - 'create group_media:audio content'
+  - 'create group_media:audio entity'
+  - 'create group_media:document content'
+  - 'create group_media:document entity'
+  - 'create group_media:image content'
+  - 'create group_media:image entity'
+  - 'create group_media:video content'
+  - 'create group_media:video entity'
+  - 'create group_node:event content'
+  - 'create group_node:event entity'
+  - 'create group_node:news content'
+  - 'create group_node:news entity'
+  - 'create group_node:notification content'
+  - 'create group_node:notification entity'
+  - 'create group_node:page content'
+  - 'create group_node:page entity'
+  - 'delete any group_media:audio content'
+  - 'delete any group_media:audio entity'
+  - 'delete any group_media:document content'
+  - 'delete any group_media:document entity'
+  - 'delete any group_media:image content'
+  - 'delete any group_media:image entity'
+  - 'delete any group_media:video content'
+  - 'delete any group_media:video entity'
+  - 'delete any group_node:event content'
+  - 'delete any group_node:event entity'
+  - 'delete any group_node:news content'
+  - 'delete any group_node:news entity'
+  - 'delete any group_node:notification content'
+  - 'delete any group_node:notification entity'
+  - 'delete any group_node:page content'
+  - 'delete any group_node:page entity'
+  - 'delete own group_media:audio content'
+  - 'delete own group_media:audio entity'
+  - 'delete own group_media:document content'
+  - 'delete own group_media:document entity'
+  - 'delete own group_media:image content'
+  - 'delete own group_media:image entity'
+  - 'delete own group_media:video content'
+  - 'delete own group_media:video entity'
+  - 'delete own group_node:event content'
+  - 'delete own group_node:event entity'
+  - 'delete own group_node:news content'
+  - 'delete own group_node:news entity'
+  - 'delete own group_node:notification content'
+  - 'delete own group_node:notification entity'
+  - 'delete own group_node:page content'
+  - 'delete own group_node:page entity'
+  - 'edit group'
+  - 'leave group'
+  - 'update any group_media:audio content'
+  - 'update any group_media:audio entity'
+  - 'update any group_media:document content'
+  - 'update any group_media:document entity'
+  - 'update any group_media:image content'
+  - 'update any group_media:image entity'
+  - 'update any group_media:video content'
+  - 'update any group_media:video entity'
+  - 'update any group_node:event content'
+  - 'update any group_node:event entity'
+  - 'update any group_node:news content'
+  - 'update any group_node:news entity'
+  - 'update any group_node:notification content'
+  - 'update any group_node:notification entity'
+  - 'update any group_node:page content'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio content'
+  - 'update own group_media:audio entity'
+  - 'update own group_media:document content'
+  - 'update own group_media:document entity'
+  - 'update own group_media:image content'
+  - 'update own group_media:image entity'
+  - 'update own group_media:video content'
+  - 'update own group_media:video entity'
+  - 'update own group_membership content'
+  - 'update own group_node:event content'
+  - 'update own group_node:event entity'
+  - 'update own group_node:news content'
+  - 'update own group_node:news entity'
+  - 'update own group_node:notification content'
+  - 'update own group_node:notification entity'
+  - 'update own group_node:page content'
+  - 'update own group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio content'
+  - 'view group_media:audio entity'
+  - 'view group_media:document content'
+  - 'view group_media:document entity'
+  - 'view group_media:image content'
+  - 'view group_media:image entity'
+  - 'view group_media:video content'
+  - 'view group_media:video entity'
+  - 'view group_membership content'
+  - 'view group_node:event content'
+  - 'view group_node:event entity'
+  - 'view group_node:guide entity'
+  - 'view group_node:information entity'
+  - 'view group_node:news content'
+  - 'view group_node:news entity'
+  - 'view group_node:notification content'
+  - 'view group_node:notification entity'
+  - 'view group_node:page content'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
