--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -12,57 +12,57 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'leave group'
-  2: 'access group_node overview'
-  3: 'delete own group_node:news entity'
-  4: 'update any group_node:news entity'
-  5: 'update own group_node:news entity'
-  6: 'view group_node:news entity'
-  7: 'view unpublished group_node:news entity'
-  8: 'view group_node:guide entity'
-  9: 'view group_node:information entity'
-  10: 'delete own group_node:event entity'
-  11: 'update any group_node:event entity'
-  12: 'update own group_node:event entity'
-  13: 'view group_node:event entity'
-  14: 'view unpublished group_node:event entity'
-  15: 'create group_node:notification entity'
-  16: 'delete own group_node:notification entity'
-  17: 'update any group_node:notification entity'
-  18: 'update own group_node:notification entity'
-  19: 'view group_node:notification entity'
-  20: 'view unpublished group_node:notification entity'
-  21: 'access group_media overview'
-  22: 'create group_media:audio entity'
-  23: 'delete own group_media:audio entity'
-  24: 'update any group_media:audio entity'
-  25: 'update own group_media:audio entity'
-  26: 'view group_media:audio entity'
-  27: 'view unpublished group_media:audio entity'
-  28: 'create group_media:document entity'
-  29: 'delete own group_media:document entity'
-  30: 'update any group_media:document entity'
-  31: 'update own group_media:document entity'
-  32: 'view group_media:document entity'
-  33: 'view unpublished group_media:document entity'
-  34: 'create group_media:image entity'
-  35: 'delete own group_media:image entity'
-  36: 'update any group_media:image entity'
-  37: 'update own group_media:image entity'
-  38: 'view group_media:image entity'
-  39: 'view unpublished group_media:image entity'
-  40: 'create group_media:video entity'
-  41: 'delete own group_media:video entity'
-  42: 'update any group_media:video entity'
-  43: 'update own group_media:video entity'
-  44: 'view group_media:video entity'
-  45: 'view unpublished group_media:video entity'
-  46: 'delete own group_node:page entity'
-  47: 'update any group_node:page entity'
-  48: 'update own group_node:page entity'
-  49: 'view group_node:page entity'
-  50: 'view unpublished group_node:page entity'
-  79: 'create group_node:event entity'
-  87: 'create group_node:news entity'
-  99: 'create group_node:page entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'create group_media:audio entity'
+  - 'create group_media:document entity'
+  - 'create group_media:image entity'
+  - 'create group_media:video entity'
+  - 'create group_node:event entity'
+  - 'create group_node:news entity'
+  - 'create group_node:notification entity'
+  - 'create group_node:page entity'
+  - 'delete own group_media:audio entity'
+  - 'delete own group_media:document entity'
+  - 'delete own group_media:image entity'
+  - 'delete own group_media:video entity'
+  - 'delete own group_node:event entity'
+  - 'delete own group_node:news entity'
+  - 'delete own group_node:notification entity'
+  - 'delete own group_node:page entity'
+  - 'leave group'
+  - 'update any group_media:audio entity'
+  - 'update any group_media:document entity'
+  - 'update any group_media:image entity'
+  - 'update any group_media:video entity'
+  - 'update any group_node:event entity'
+  - 'update any group_node:news entity'
+  - 'update any group_node:notification entity'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio entity'
+  - 'update own group_media:document entity'
+  - 'update own group_media:image entity'
+  - 'update own group_media:video entity'
+  - 'update own group_node:event entity'
+  - 'update own group_node:news entity'
+  - 'update own group_node:notification entity'
+  - 'update own group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:event entity'
+  - 'view group_node:guide entity'
+  - 'view group_node:information entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
