--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -12,99 +12,140 @@ audience: member
 group_type: program
 permissions_ui: true
 permissions:
-  0: 'edit group'
-  1: 'view group'
-  2: 'administer members'
-  3: 'update own group_membership content'
-  4: 'leave group'
-  5: 'view group_membership content'
-  6: 'access group_node overview'
-  7: 'create group_node:city_service entity'
-  8: 'delete any group_node:city_service entity'
-  9: 'delete own group_node:city_service entity'
-  10: 'update any group_node:city_service entity'
-  11: 'update own group_node:city_service entity'
-  12: 'view group_node:city_service entity'
-  13: 'view unpublished group_node:city_service entity'
-  14: 'create group_node:city_service content'
-  15: 'view group_node:city_service content'
-  16: 'delete any group_node:news entity'
-  17: 'delete own group_node:news entity'
-  18: 'update any group_node:news entity'
-  19: 'update own group_node:news entity'
-  20: 'view group_node:news entity'
-  21: 'view unpublished group_node:news entity'
-  22: 'create group_node:news content'
-  23: 'view group_node:news content'
-  33: 'delete any group_node:event entity'
-  34: 'delete own group_node:event entity'
-  35: 'update any group_node:event entity'
-  36: 'update own group_node:event entity'
-  37: 'view group_node:event entity'
-  38: 'view unpublished group_node:event entity'
-  39: 'create group_node:event content'
-  40: 'view group_node:event content'
-  41: 'create group_node:notification entity'
-  42: 'delete any group_node:notification entity'
-  43: 'delete own group_node:notification entity'
-  44: 'update any group_node:notification entity'
-  45: 'update own group_node:notification entity'
-  46: 'view group_node:notification entity'
-  47: 'view unpublished group_node:notification entity'
-  48: 'create group_node:notification content'
-  49: 'view group_node:notification content'
-  50: 'access group_media overview'
-  51: 'create group_media:audio entity'
-  52: 'delete any group_media:audio entity'
-  53: 'delete own group_media:audio entity'
-  54: 'update any group_media:audio entity'
-  55: 'update own group_media:audio entity'
-  56: 'view group_media:audio entity'
-  57: 'view unpublished group_media:audio entity'
-  58: 'create group_media:audio content'
-  59: 'create group_media:document entity'
-  60: 'delete any group_media:document entity'
-  61: 'delete own group_media:document entity'
-  62: 'update any group_media:document entity'
-  63: 'update own group_media:document entity'
-  64: 'view group_media:document entity'
-  65: 'view unpublished group_media:document entity'
-  66: 'create group_media:document content'
-  67: 'view group_media:document content'
-  68: 'create group_media:image entity'
-  69: 'delete any group_media:image entity'
-  70: 'delete own group_media:image entity'
-  71: 'update any group_media:image entity'
-  72: 'update own group_media:image entity'
-  73: 'view group_media:image entity'
-  74: 'view unpublished group_media:image entity'
-  75: 'create group_media:image content'
-  76: 'view group_media:image content'
-  77: 'create group_media:video entity'
-  78: 'delete any group_media:video entity'
-  79: 'delete own group_media:video entity'
-  80: 'update any group_media:video entity'
-  81: 'update own group_media:video entity'
-  82: 'view group_media:video entity'
-  83: 'view unpublished group_media:video entity'
-  84: 'create group_media:video content'
-  85: 'view group_media:video content'
-  86: 'create group_node:page entity'
-  87: 'delete any group_node:page entity'
-  88: 'delete own group_node:page entity'
-  89: 'update any group_node:page entity'
-  90: 'update own group_node:page entity'
-  91: 'view group_node:page entity'
-  92: 'view unpublished group_node:page entity'
-  93: 'create group_node:page content'
-  94: 'view group_node:page content'
-  95: 'create group_node:event entity'
-  96: 'create group_node:news entity'
-  140: 'delete any group_node:development_permit entity'
-  141: 'delete own group_node:development_permit entity'
-  142: 'update any group_node:development_permit entity'
-  143: 'update own group_node:development_permit entity'
-  144: 'view group_node:development_permit entity'
-  145: 'view unpublished group_node:development_permit entity'
-  146: 'create group_node:development_permit content'
-  147: 'view group_node:development_permit content'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'administer members'
+  - 'create group_media:audio content'
+  - 'create group_media:audio entity'
+  - 'create group_media:document content'
+  - 'create group_media:document entity'
+  - 'create group_media:image content'
+  - 'create group_media:image entity'
+  - 'create group_media:video content'
+  - 'create group_media:video entity'
+  - 'create group_node:city_service content'
+  - 'create group_node:city_service entity'
+  - 'create group_node:development_permit content'
+  - 'create group_node:event content'
+  - 'create group_node:event entity'
+  - 'create group_node:news content'
+  - 'create group_node:news entity'
+  - 'create group_node:notification content'
+  - 'create group_node:notification entity'
+  - 'create group_node:page content'
+  - 'create group_node:page entity'
+  - 'delete any group_media:audio content'
+  - 'delete any group_media:audio entity'
+  - 'delete any group_media:document content'
+  - 'delete any group_media:document entity'
+  - 'delete any group_media:image content'
+  - 'delete any group_media:image entity'
+  - 'delete any group_media:video content'
+  - 'delete any group_media:video entity'
+  - 'delete any group_node:city_service content'
+  - 'delete any group_node:city_service entity'
+  - 'delete any group_node:development_permit content'
+  - 'delete any group_node:development_permit entity'
+  - 'delete any group_node:event content'
+  - 'delete any group_node:event entity'
+  - 'delete any group_node:news content'
+  - 'delete any group_node:news entity'
+  - 'delete any group_node:notification content'
+  - 'delete any group_node:notification entity'
+  - 'delete any group_node:page content'
+  - 'delete any group_node:page entity'
+  - 'delete own group_media:audio content'
+  - 'delete own group_media:audio entity'
+  - 'delete own group_media:document content'
+  - 'delete own group_media:document entity'
+  - 'delete own group_media:image content'
+  - 'delete own group_media:image entity'
+  - 'delete own group_media:video content'
+  - 'delete own group_media:video entity'
+  - 'delete own group_node:city_service content'
+  - 'delete own group_node:city_service entity'
+  - 'delete own group_node:development_permit content'
+  - 'delete own group_node:development_permit entity'
+  - 'delete own group_node:event content'
+  - 'delete own group_node:event entity'
+  - 'delete own group_node:news content'
+  - 'delete own group_node:news entity'
+  - 'delete own group_node:notification content'
+  - 'delete own group_node:notification entity'
+  - 'delete own group_node:page content'
+  - 'delete own group_node:page entity'
+  - 'edit group'
+  - 'leave group'
+  - 'update any group_media:audio content'
+  - 'update any group_media:audio entity'
+  - 'update any group_media:document content'
+  - 'update any group_media:document entity'
+  - 'update any group_media:image content'
+  - 'update any group_media:image entity'
+  - 'update any group_media:video content'
+  - 'update any group_media:video entity'
+  - 'update any group_node:city_service content'
+  - 'update any group_node:city_service entity'
+  - 'update any group_node:development_permit content'
+  - 'update any group_node:development_permit entity'
+  - 'update any group_node:event content'
+  - 'update any group_node:event entity'
+  - 'update any group_node:news content'
+  - 'update any group_node:news entity'
+  - 'update any group_node:notification content'
+  - 'update any group_node:notification entity'
+  - 'update any group_node:page content'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio content'
+  - 'update own group_media:audio entity'
+  - 'update own group_media:document content'
+  - 'update own group_media:document entity'
+  - 'update own group_media:image content'
+  - 'update own group_media:image entity'
+  - 'update own group_media:video content'
+  - 'update own group_media:video entity'
+  - 'update own group_membership content'
+  - 'update own group_node:city_service content'
+  - 'update own group_node:city_service entity'
+  - 'update own group_node:development_permit content'
+  - 'update own group_node:development_permit entity'
+  - 'update own group_node:event content'
+  - 'update own group_node:event entity'
+  - 'update own group_node:news content'
+  - 'update own group_node:news entity'
+  - 'update own group_node:notification content'
+  - 'update own group_node:notification entity'
+  - 'update own group_node:page content'
+  - 'update own group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio content'
+  - 'view group_media:audio entity'
+  - 'view group_media:document content'
+  - 'view group_media:document entity'
+  - 'view group_media:image content'
+  - 'view group_media:image entity'
+  - 'view group_media:video content'
+  - 'view group_media:video entity'
+  - 'view group_membership content'
+  - 'view group_node:city_service content'
+  - 'view group_node:city_service entity'
+  - 'view group_node:development_permit content'
+  - 'view group_node:development_permit entity'
+  - 'view group_node:event content'
+  - 'view group_node:event entity'
+  - 'view group_node:news content'
+  - 'view group_node:news entity'
+  - 'view group_node:notification content'
+  - 'view group_node:notification entity'
+  - 'view group_node:page content'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'view unpublished group_node:development_permit entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
