POWR-1273 fix config conflict

--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -118,6 +118,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
