--- a/web/sites/default/config/core.entity_view_display.node.event.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.featured.yml
@@ -369,6 +369,7 @@ content:
     region: first
 hidden:
   content_moderation_control: true
+  field_group: true
   field_legacy_path: true
   field_location: true
   field_related_content: true
