--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -325,6 +325,7 @@ hidden:
   field_body_content: true
   field_event_location: true
   field_featured_media: true
+  field_group: true
   field_legacy_path: true
   field_location: true
   field_related_content: true
