--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -130,6 +130,7 @@ hidden:
   field_body_content: true
   field_feature_this_content: true
   field_feature_until: true
+  field_group: true
   field_legacy_path: true
   field_location: true
   field_news_type: true
