--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -182,6 +182,7 @@ hidden:
   field_feature_this_content: true
   field_feature_until: true
   field_featured_media: true
+  field_group: true
   field_legacy_path: true
   field_location: true
   field_news_type: true
