--- a/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
@@ -140,6 +140,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
