--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -88,6 +88,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
+  field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
