--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -124,6 +124,7 @@ hidden:
   field_audience: true
   field_body_content: true
   field_featured_media: true
+  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
