POWR-1273 config the forms to only show new group selector

--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -49,12 +49,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_group:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_license:
     weight: 8
     settings: {  }
@@ -96,13 +90,13 @@ content:
     weight: 9
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       required: '1'
       multiple: 0
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -124,13 +118,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 11
+    weight: 10
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
   created: true
+  field_group: true
   field_media_in_library: true
   path: true
   uid: true
