--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -23,7 +23,6 @@ dependencies:
     - workflows.workflow.editorial
   module:
     - bootstrap_datepicker
-    - chosen_field
     - conditional_fields
     - content_moderation
     - entity_browser
@@ -142,7 +141,7 @@ content:
     region: content
   field_event_location:
     type: entity_reference_paragraphs
-    weight: 21
+    weight: 20
     settings:
       title: location
       title_plural: locations
@@ -167,14 +166,8 @@ content:
       open: false
     region: content
     third_party_settings: {  }
-  field_group:
-    weight: 17
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_legacy_path:
-    weight: 20
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -206,7 +199,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 18
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -329,7 +322,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 19
+    weight: 18
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -365,6 +358,7 @@ content:
     region: content
     third_party_settings: {  }
 hidden:
+  field_group: true
   path: true
   promote: true
   url_redirects: true
