--- a/web/sites/default/config/field.field.media.image.field_group.yml
+++ b/web/sites/default/config/field.field.media.image.field_group.yml
@@ -22,7 +22,7 @@ entity_type: media
 bundle: image
 label: Group
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
