--- a/web/sites/default/config/field.field.node.page.field_body_content.yml
+++ b/web/sites/default/config/field.field.node.page.field_body_content.yml
@@ -12,6 +12,8 @@ dependencies:
 third_party_settings:
   allowed_formats:
     simplified_editor_with_media_embed: simplified_editor_with_media_embed
+    basic_style_editor: '0'
+    full_html: '0'
     simple_editor: '0'
     rich_text: '0'
     plain_text: '0'
@@ -24,7 +26,7 @@ entity_type: node
 bundle: page
 label: 'Body content'
 description: 'In the body, you can add formatted text, documents, images or audio/video.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
