--- a/web/sites/default/config/field.field.node.page.field_summary.yml
+++ b/web/sites/default/config/field.field.node.page.field_summary.yml
@@ -17,7 +17,7 @@ entity_type: node
 bundle: page
 label: Summary
 description: 'Brief description from a community point of view that is used in search results and in social media cards.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
