--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -37,12 +37,6 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
-  field_group:
-    weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_summary:
     weight: 2
     settings:
@@ -58,16 +52,16 @@ content:
     region: content
   group_content:
     type: group_selector_widget
-    weight: 5
+    weight: 4
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       required: '1'
       multiple: 0
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -81,7 +75,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 6
+    weight: 5
     region: content
     settings:
       display_label: true
@@ -89,6 +83,7 @@ content:
 hidden:
   created: true
   field_file_size: true
+  field_group: true
   field_media_in_library: true
   field_mime_type: true
   path: true
