--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -56,12 +56,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_group:
-    weight: 8
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_license:
     weight: 6
     settings: {  }
@@ -89,7 +83,7 @@ content:
     weight: 7
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       required: '1'
       multiple: 0
     third_party_settings: {  }
@@ -108,7 +102,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -122,7 +116,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 9
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -130,6 +124,7 @@ content:
 hidden:
   created: true
   field_file_size: true
+  field_group: true
   field_image_height: true
   field_image_width: true
   field_media_in_library: true
