--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -51,12 +51,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_group:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_license:
     weight: 8
     settings: {  }
@@ -95,7 +89,7 @@ content:
     region: content
   group_content:
     type: group_selector_widget
-    weight: 10
+    weight: 9
     region: content
     settings:
       widget: autocomplete
@@ -104,7 +98,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -126,13 +120,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 11
+    weight: 10
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
   created: true
+  field_group: true
   field_media_in_library: true
   path: true
   uid: true
