--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -47,12 +47,6 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
-  field_group:
-    weight: 16
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_legacy_path:
     weight: 9
     settings:
@@ -78,7 +72,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 17
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -154,7 +148,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
+    weight: 17
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -196,6 +190,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_group: true
   promote: true
   status: true
   sticky: true
