--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -86,12 +86,6 @@ content:
       open: false
     region: content
     third_party_settings: {  }
-  field_group:
-    weight: 18
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
-    region: content
   field_legacy_path:
     weight: 10
     region: content
@@ -137,7 +131,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 19
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -183,7 +177,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 20
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -217,6 +211,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_body: true
+  field_group: true
   promote: true
   status: true
   sticky: true
