--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -33,7 +33,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -66,15 +66,6 @@ content:
       open: false
     region: content
     third_party_settings: {  }
-  field_group:
-    weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_legacy_path:
     weight: 9
     settings:
@@ -106,7 +97,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 17
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -115,7 +106,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 15
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -143,7 +134,7 @@ content:
     region: content
   group_content:
     type: group_selector_widget
-    weight: 16
+    weight: 15
     region: content
     settings:
       widget: autocomplete
@@ -152,7 +143,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
+    weight: 17
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -175,7 +166,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 12
     region: content
     settings:
       match_operator: CONTAINS
@@ -188,6 +179,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_group: true
   promote: true
   status: true
   sticky: true
