--- a/web/sites/default/config/pathauto.pattern.group_news.yml
+++ b/web/sites/default/config/pathauto.pattern.group_news.yml
@@ -7,16 +7,16 @@ dependencies:
 id: group_news
 label: 'Group news'
 type: 'canonical_entities:node'
-pattern: '[node:group:field_shortname_or_acronym]/news/[node:title]'
+pattern: '[node:group:field_shortname_or_acronym]/news/[node:field_published_on:date:html_month]/[node:title]'
 selection_criteria:
-  76d37fba-9d4b-45f4-a04c-654bd277f2a5:
+  efbdf27f-0a0a-48bc-8b6d-462b4498015b:
     id: node_type
     bundles:
       news: news
     negate: false
     context_mapping:
       node: node
-    uuid: 76d37fba-9d4b-45f4-a04c-654bd277f2a5
+    uuid: efbdf27f-0a0a-48bc-8b6d-462b4498015b
 selection_logic: and
 weight: -13
 relationships: {  }
