--- a/web/modules/custom/portland_migrations/migrations/policies_types.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies_types.yml
@@ -8,6 +8,9 @@ source:
   keys:
     - TYPE_CODE
 process:
+  vid:
+    plugin: default_value
+    default_value: policy_type
   name: TYPE_NAME
   type_code: TYPE_CODE
   description: DESCRIPTION
