--- a/web/modules/custom/portland_migrations/migrations/policies_categories.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies_categories.yml
@@ -8,6 +8,9 @@ source:
   keys:
     - CATEGORY_NAME
 process:
+  vid:
+    plugin: default_value
+    default_value: policy_category
   name: CATEGORY_NAME
 destination:
   plugin: 'entity:taxonomy_term'
