POWR-1112 Add layout that references pattern

--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -49,3 +49,16 @@ cloudy_main_with_sidebar:
       label: Primary
     secondary:
       label: Secondary
+
+cloudy_two_column_pattern:
+  label: Cloudy two column pattern
+  category: Cloudy
+  template: templates/layout/cloudy-two-column-pattern
+  class: '\Drupal\ds\Plugin\DsLayout'
+  regions:
+    pageContent:
+      label: Content
+    sideColumn:
+      label: Side Column
+    postContent:
+      label: Post content
