POWR-1102 custom plugin working well, can't save media as published

--- a/web/modules/custom/portland_migrations/migrations/policies.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies.yml
@@ -8,7 +8,7 @@ dependencies:
 migration_group: policies
 source:
   plugin: csv
-  path: modules/custom/portland_migrations/sources/policies_test.csv
+  path: modules/custom/portland_migrations/sources/policies_test_1.csv
   header_row_count: 1
   keys:
     - CONTENT_ID
@@ -23,7 +23,7 @@ process:
   field_body_content/format:
     plugin: default_value
     default_value: simplified_editor_with_media_embed
-  field_summary: SUMMARY_TEXT
+  field_policy_number: POLICY_NUMBER
   field_legacy_path:
     plugin: str_replace
     case_insensitive: true
