POWR-1102 added type code field to policy type vocab; changed data type of policy number field

--- a/web/sites/default/config/field.storage.node.field_policy_number.yml
+++ b/web/sites/default/config/field.storage.node.field_policy_number.yml
@@ -1,4 +1,4 @@
-uuid: ee29dac7-25b9-47d3-b008-a6b358b74319
+uuid: 9e02579a-6985-4f39-8e31-0fac859337db
 langcode: en
 status: true
 dependencies:
@@ -11,10 +11,11 @@ third_party_settings:
 id: node.field_policy_number
 field_name: field_policy_number
 entity_type: node
-type: integer
+type: string
 settings:
-  unsigned: false
-  size: normal
+  max_length: 32
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
