--- a/web/sites/default/config/core.entity_form_display.taxonomy_term.policy_type.default.yml
+++ b/web/sites/default/config/core.entity_form_display.taxonomy_term.policy_type.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.policy_type.field_policy_type_code
     - taxonomy.vocabulary.policy_type
   module:
     - path
@@ -13,13 +14,21 @@ bundle: policy_type
 mode: default
 content:
   description:
-    type: text_textfield
+    type: text_textarea
     weight: 0
     region: content
+    settings:
+      placeholder: ''
+      rows: 5
+    third_party_settings: {  }
+  field_policy_type_code:
+    weight: 31
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: -5
