--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.policy_type.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.policy_type.default.yml
@@ -3,9 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.policy_type.field_policy_type_code
     - taxonomy.vocabulary.policy_type
   module:
+    - panelizer
     - text
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: taxonomy_term.policy_type.default
 targetEntityType: taxonomy_term
 bundle: policy_type
@@ -18,4 +26,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_policy_type_code:
+    weight: 1
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden: {  }
