--- a/web/sites/default/config/field.field.node.policy.field_policy_number.yml
+++ b/web/sites/default/config/field.field.node.policy.field_policy_number.yml
@@ -1,4 +1,4 @@
-uuid: 157b2284-2fa2-4fbd-bc6b-8fed0cb2c5ac
+uuid: b057540b-315e-428b-ab08-b104af35d0b4
 langcode: en
 status: true
 dependencies:
@@ -17,13 +17,9 @@ entity_type: node
 bundle: policy
 label: 'Policy number'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings:
-  min: null
-  max: null
-  prefix: ''
-  suffix: ''
-field_type: integer
+settings: {  }
+field_type: string
