POWR-1182 initial commit of configs and initial updates for ckeditor templates

--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -52,11 +52,15 @@ settings:
             - ShowBlocks
             - Source
             - Styles
+            - Templates
   plugins:
     stylescombo:
       styles: "a.btn-cta|Call to action button\r\na.btn-cta-outline|Outline button\r\n"
     language:
       language_list: un
+    templates:
+      template_path: /themes/custom/cloudy/js/ckeditor_templates.js
+      replace_content: 0
     linkit:
       linkit_profile: powr
 image_upload:
