--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -209,3 +209,5 @@ geocoder_address: 2.2.0
 geocoder_geofield: 2.2.0
 address_map_link: 1.0.0
 yearonly: 1.3.0
+ckeditor_templates: 1.1.0
+ckeditor_templates_ui: 1.2.0
