POWR-1287 Update group news patter and remove alias field from project form

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -30,7 +30,6 @@ dependencies:
     - entity_browser
     - field_group
     - maxlength
-    - path
 third_party_settings:
   field_group:
     group_site_menu:
@@ -314,19 +313,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 16
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 17
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  path: true
+  uid: true
