POWR-1182 moved the templates icon into a new toolbar Layout group

--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -37,6 +37,10 @@ settings:
             - Linkit
             - DrupalUnlink
         -
+          name: Layout
+          items:
+            - Templates
+        -
           name: Media
           items:
             - document_browser
@@ -52,7 +56,6 @@ settings:
             - ShowBlocks
             - Source
             - Styles
-            - Templates
   plugins:
     stylescombo:
       styles: "a.btn-cta|Call to action button\r\na.btn-cta-outline|Outline button\r\n"
