POWR-453 Use related display mode for view

--- a/web/sites/default/config/views.view.back_reference_related_content.yml
+++ b/web/sites/default/config/views.view.back_reference_related_content.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.related
   module:
     - node
     - user
@@ -74,7 +74,7 @@ display:
         type: 'entity:node'
         options:
           relationship: reverse__node__field_related_content
-          view_mode: teaser
+          view_mode: related
       fields:
         type:
           id: type
