POWR-1273 update news to use a select instead of autocomplete for comparrison

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -171,7 +171,7 @@ content:
     weight: 17
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       multiple: '1'
       required: '1'
     third_party_settings: {  }
