POWR-1273 update some group config and .lando.yml

--- a/.lando.yml
+++ b/.lando.yml
@@ -102,6 +102,16 @@ tooling:
       - appserver: drush updb -y
       - appserver: echo "Exporting Drupal config..."
       - appserver: drush cex -y
+  xdebug-on:
+    service: appserver
+    description: Enable xdebug for nginx.
+    cmd: docker-php-ext-enable xdebug && pkill -o -USR2 php-fpm && echo "Enabling xdebug"
+    user: root
+  xdebug-off:
+    service: appserver
+    description: Disable xdebug for nginx.
+    cmd: rm /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && pkill -o -USR2 php-fpm && echo "Disabling xdebug"
+    user: root
   behat:
     service: appserver
     description: "Run behat tests"
