POWR-1273 content type form updates to use select

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -142,7 +142,7 @@ content:
     weight: 15
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       required: '1'
       multiple: 0
     third_party_settings: {  }
