--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -316,7 +316,7 @@ content:
     weight: 16
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       multiple: '1'
       required: '1'
     third_party_settings: {  }
