--- a/web/sites/default/config/core.entity_form_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.notification.default.yml
@@ -65,7 +65,7 @@ content:
     weight: 7
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       multiple: '1'
       required: '1'
     third_party_settings: {  }
