--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -137,9 +137,9 @@ content:
     weight: 15
     region: content
     settings:
-      widget: autocomplete
+      widget: select
+      required: '1'
       multiple: 0
-      required: 0
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
