--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - field_summary
         - field_body_content
 id: node.page.default
 targetEntityType: node
@@ -44,7 +45,7 @@ bundle: page
 mode: default
 content:
   field_body_content:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -87,24 +88,52 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
-  field_group:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+  field_summary:
+    type: string
+    weight: 1
     region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   content_moderation_control: true
   field_audience: true
+  field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
-  field_summary: true
   field_topics: true
   group_content: true
   links: true
